@@ -1,6 +1,8 @@
 Revision history for Perl extension MojoX-Dispatcher-Qooxdoo-Jsonrpc:
 
         - fix namespace issues
+        - update error codes according to
+          http://manual.qooxdoo.org/1.3.x/pages/communication/rpc_server_writer_guide.html#code
 
 0.69	Mon Feb 28 2011
         - better documentation
